  processor floating point issues when comparing doubles
- foreach on a hash now skips over keys with $null values
  (a $null value is removed at the first convienence from a
  Sleep hash--usually by keys() or values() functions)
- Fixed bug causing -exists "" to return true..  turns out
  toSleepFile evaluated "" to the current working directory

2.1-release  (1 Jul 08)
===========
- splice() no longer corrupts sublists.
- values(%hash) now omits $null values.  
- sped up scope functions: &local, &global, and &this by cacheing 
  the regex pattern used to split up the var names
- added a compile time check for %(a => ... b => ...) errors
  [notice the missing comma between the key/value pairs]

2.1-release  (16 Jun 08)
===========
- SleepUtils#runCode(SleepClosure, ...) now accepts a null value
  for the ScriptInstance parameter.
- eliminated unnecessary frame creation within the Index operator
- added a check to cleanup the current frame when a bad index 
  error occurs.

2.1-beta 27  (30 May 08)
===========
- Virtual machine errors (stack overflow, out of memory) etc.
  are now caught within the interpreter and used to coerce
  a printout of the location of each Sleep stack frame.
- SleepClosure now implements the Runnable interface.
- fixed a null pointer exception for assertions triggered
  with no preceeding statements.
- created a java.util.List compatible data structure to back
  Sleep arrays.  this data structure is similar to LinkedList
  except it creates sublists with more desired performance
  characteristics
- added better error messages for ConcurrentModificationException's
  thrown by Java
- foreach loops now break if a ConcurrentModificationException
  is thrown.
- reimplemented regex pattern and hasmatch state cacheing to 
  prevent memory leaks.  Sleep will cache 128 patterns globally 
  and up to 16 hasmatch contexts per closure.  Remember that 
  hasmatch will remove its state after returning false.  These