@@ -1,0 +1,6 @@
+0 and a
+1 and b
+2 and c
+3 and d
+3 and e
+[a, b, c]
